# nonebot_plugin_rename

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi-publish.yml
card/: gaokao_time.py  genshin_time.py  get_times.py  hot_search.py  message.py  one_word.py  status.py
config/: config.py
nonebot_plugin_rename/: __init__.py  config.py  main.py
nonebot_plugin_rename/card/: __init__.py  exam_time.py  gaokao_time.py  genshin_time.py  get_times.py  hot_search.py  message.py  mhy_time.py  one_word.py  starrail_time.py  status.py  year_time.py
nonebot_plugin_rename/utils/: __init__.py  card_choice.py  card_name.py  download.py  draw.py  my_yaml.py
utils/: card_choice.py  card_name.py  draw.py  my_yaml.py  utils.py
