[tool.poetry]
name = "nonebot-plugin-rename"
version = "1.2.0"
description = "更改qq机器人的群名片，内置多种有趣名片"
authors = ["forchannot <yy320206@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "nonebot_plugin_rename"}]

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.3"
nonebot-adapter-onebot = "^2.2.2"
nonebot-plugin-apscheduler = "^0.2.0"
psutil = "^5.9.5"
pyyaml = "^6.0"
pillow = "^9.5.0"
aiohttp = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
