[tool.poetry]
name = "nonebot-plugin-rename"
version = "1.6.5"
description = "更改qq机器人的群名片，内置多种有趣名片"
authors = ["forchannot <yy320206@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "nonebot_plugin_rename"}]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0, <1.0.0"
nonebot-adapter-onebot = "^2.2.2"
nonebot-plugin-apscheduler = "^0.2.0"
psutil = "^5.9.5"
pyyaml = "^6.0"
pillow = "^9.5.0"
nonebot2 = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "B"]
ignore = ["E501"]
unfixable = ["B"]
line-length = 88
target-version = "py38"


[tool.isort]
profile = 'black'

